--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,79 @@ body {
   background-color: #eae4d7;
   margin: 0px;
 }
+
+/* Styling the header: Navigation Bar */
+
+header{
+  margin: 0px;
+}
+
+a {
+  text-decoration: none;
+  color: #195cc8;
+  font-weight: bold;
+}
+
+ul {
+  list-style: none;
+}
+
+section {
+  padding: 2rem 9%;
+}
+
+.logo {
+  font-size: 2.5rem;
+  font-weight: bolder;
+  display: inline-block;
+}
+
+.logo i {
+  padding-right: 2rem;
+  color: black;
+}
+
+.logo{
+  font-size: 35px;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+
+span{
+  color: #195cc8;
+}
+
+.span2 {
+  font-family: 'Fraunces', serif;
+}
+
+/* Styling the nav container */
+
+.nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #eae4d7;
+  height:65px;
+  font-size: 20px;
+  padding-left: 8%;
+  padding-right: 8%;
+}
+
+.menu li:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+.menu{
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  margin: 0;
+}
+
+.menu > li {
+  margin: 0 1rem;
+  overflow: hidden;
+}
