--- a/styles.css
+++ b/styles.css
@@ -108,3 +108,44 @@ span{
   margin: 0 1rem;
   overflow: hidden;
 }
+
+/* Container for menu button */
+
+.menu-button-container {
+  display: none;
+  height: 100%;
+  width: 30px;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#menu-toggle {
+  display: none;
+}
+
+/* Creating the menu button */
+
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+  display: block;
+  /* background-color: white; */
+  background-color: #195cc8;
+  position: absolute;
+  height: 6px;
+  width: 32px;
+  border-radius: 3px;
+  color: black;
+}
+
+.menu-button::before {
+  content: '';
+  margin-top: -8px;
+}
+
+.menu-button::after {
+  content: '';
+  margin-top: 8px;
+}
