--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
 
 /* Styling the header: Navigation Bar */
 
-header{
+header {
   margin: 0px;
 }
 
@@ -66,13 +66,13 @@ section {
   color: black;
 }
 
-.logo{
+.logo {
   font-size: 35px;
   letter-spacing: 1px;
   cursor: pointer;
 }
 
-span{
+span {
   color: #195cc8;
 }
 
@@ -88,7 +88,7 @@ span{
   align-items: center;
   justify-content: space-between;
   background-color: #eae4d7;
-  height:65px;
+  height: 65px;
   font-size: 20px;
   padding-left: 8%;
   padding-right: 8%;
@@ -99,14 +99,14 @@ span{
   transform: scale(1.2);
 }
 
-.menu{
+.menu {
   display: flex;
   flex-direction: row;
   list-style-type: none;
   margin: 0;
 }
 
-.menu > li {
+.menu>li {
   margin: 0 1rem;
   overflow: hidden;
 }
@@ -154,23 +154,24 @@ span{
 
 /* Adding functionality to Hamburger Menu with CSS*/
 
-#menu-toggle:checked + .menu-button-container .menu-button::before{
+#menu-toggle:checked+.menu-button-container .menu-button::before {
   margin-top: 0px;
   transform: rotate(45deg);
 }
 
-#menu-toggle:checked + .menu-button-container .menu-button{
+#menu-toggle:checked+.menu-button-container .menu-button {
   background: rgba(255, 255, 255, 0);
 }
 
-#menu-toggle:checked + .menu-button-container .menu-button::after {
+#menu-toggle:checked+.menu-button-container .menu-button::after {
   margin-top: 0px;
-  transform: rotate(-45deg);  /* Transforms the hamburger icon into a cross*/
+  transform: rotate(-45deg);
+  /* Transforms the hamburger icon into a cross*/
 }
 
 /*Styling the hero section*/
 
-.wave{
+.wave {
   animation-duration: 2.1s;
   animation-iteration-count: infinite;
   animation-name: wave-animation;
@@ -179,15 +180,41 @@ span{
 }
 
 @keyframes wave-animation {
-  0% { transform: rotate( 0.0deg) }
- 10% { transform: rotate(45.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
- 20% { transform: rotate(-8.0deg) }
- 30% { transform: rotate(45.0deg) }
- 40% { transform: rotate(-4.0deg) }
- 50% { transform: rotate(10.0deg) }
- 60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
-100% { transform: rotate( 0.0deg) }
+  0% {
+    transform: rotate(0.0deg)
+  }
+
+  10% {
+    transform: rotate(45.0deg)
+  }
+
+  /* The following five values can be played with to make the waving more or less extreme */
+  20% {
+    transform: rotate(-8.0deg)
+  }
+
+  30% {
+    transform: rotate(45.0deg)
+  }
+
+  40% {
+    transform: rotate(-4.0deg)
+  }
+
+  50% {
+    transform: rotate(10.0deg)
+  }
+
+  60% {
+    transform: rotate(0.0deg)
+  }
+
+  /* Reset for the last half to pause */
+  100% {
+    transform: rotate(0.0deg)
+  }
 }
+
 .hero {
   display: flex;
   flex-wrap: wrap;
@@ -199,11 +226,11 @@ span{
 
 /* Styling the hero image*/
 
-.hero .image{
+.hero .image {
   flex: 1 1 30rem;
 }
 
-.hero.image img{
+.hero.image img {
   width: 100%;
   height: 100%;
   padding: 1rem;
@@ -213,11 +240,13 @@ span{
 /* Animating the main image*/
 
 @keyframes float {
+
   0%,
-  100%{
+  100% {
     transform: translateY(0rem);
   }
-  50%{
+
+  50% {
     transform: translateY(3rem);
   }
 }
@@ -236,7 +265,8 @@ button {
   transition: 0.4s;
 }
 
-.btn1, .btn2{
+.btn1,
+.btn2 {
   margin: 1rem;
 }
 
@@ -252,7 +282,7 @@ button:hover {
 }
 
 /* Hero content hero section*/
-.herocontent{
+.herocontent {
   margin: auto;
 }
 
@@ -260,7 +290,7 @@ button:hover {
   flex: 1 1 40rem;
 }
 
-h1{
+h1 {
   color: black;
   margin: 20px 0px 20px;
   font-size: 80px;
@@ -272,7 +302,7 @@ h1{
   font-family: 'Fraunces', serif;
 }
 
-h2{
+h2 {
   color: black;
   font-size: 50px;
   margin-bottom: 1px;
@@ -283,25 +313,24 @@ h4 {
   font-size: 20px;
 }
 
-h3{
+h3 {
   font-size: 30px;
   color: black;
   letter-spacing: 2px;
   padding-bottom: 20px;
 }
 
-.tag2{
+.tag2 {
   margin-top: 5px;
   margin-bottom: 30px;
 }
 
-.hero p{
+.hero p {
   font-size: 25px;
 }
 
 
 /* Styling the About Me section*/
-
 .about {
   width: 100%;
   height: 100%;
@@ -309,21 +338,21 @@ h3{
   background-color: #e8e9e3;
 }
 
-.about img{
+.about img {
   height: auto;
-  /* width: auto; */
+  width: 30%;
   border-radius: 30px;
-  box-shadow: rgba(26, 24, 24, 0.25) 0px 5px 10px 2px;
+  box-shadow: #1a181840 0px 5px 10px 2px;
 }
 
-.about-text{
-  width: 550px;
+.about-text {
+  width: 450px;
 }
 
 
 /* About container*/
 
-.main{
+.main {
   width: 1130px;
   margin: 0 auto;
   display: flex;
@@ -331,7 +360,7 @@ h3{
   justify-content: space-around;
 }
 
-.about-text h2{
+.about-text h2 {
   font-size: 50px;
   text-transform: capitalize;
   margin-bottom: 20px;
@@ -340,7 +369,7 @@ h3{
   font-family: 'Fraunces', serif;
 }
 
-.about-text h5{
+.about-text h5 {
   letter-spacing: 2px;
   font-size: 22px;
   margin-bottom: 25px;
@@ -350,7 +379,7 @@ h3{
   font-family: 'Frances', serif;
 }
 
-.about-text p{
+.about-text p {
   letter-spacing: 1px;
   line-height: 28px;
   font-size: 18px;
@@ -359,18 +388,18 @@ h3{
 
 /* Skills section Styling */
 
-.skills{
+.skills {
   height: 100vh;
 }
 
-.skills .skills-content{
+.skills .skills-content {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
 }
 
-section .title{
+section .title {
   position: relative;
   text-align: center;
   justify-content: center;
@@ -383,23 +412,23 @@ section .title{
   color: #195cc8;
 }
 
-.skills .title::after{
+.skills .title::after {
   content: '';
   position: absolute;
   bottom: 0px;
   left: 50%;
   width: 180px;
   height: 3px;
-  background:black ;
+  background: black;
   transform: translateX(-50%);
 }
 
-.skills .skills-content .left p{
+.skills .skills-content .left p {
   text-align: justify;
   font-size: 18px;
 }
 
-.skills .skills-content .left a{
+.skills .skills-content .left a {
   display: inline-block;
   background: rgb(57, 95, 165);
   color: #fff;
@@ -421,14 +450,14 @@ section .title{
   margin-bottom: 15px;
 }
 
-.skills .skills-content .right .info{
+.skills .skills-content .right .info {
   display: flex;
   margin-bottom: 5px;
   align-items: center;
   justify-content: space-between;
 }
 
-.skills .skills-content .right span{
+.skills .skills-content .right span {
   font-weight: 500;
   font-size: 18px;
 }
@@ -852,9 +881,11 @@ h5 {
   html {
     font-size: 55%;
   }
+
   header {
     padding: 2rem;
   }
+
   section {
     padding: 2rem;
   }
@@ -864,29 +895,37 @@ h5 {
   .contact-box {
     grid-template-columns: 1fr;
   }
+
   .contactLeft {
     height: 100%;
   }
+
   .about img {
     display: none;
   }
+
   html {
     font-size: 50%;
     overflow-x: hidden;
     overflow-y: scroll;
   }
+
   .main {
     width: 100%;
   }
+
   .box {
     display: block;
   }
+
   .card {
     margin: 15px auto;
   }
+
   .service {
     height: fit-content;
   }
+
   .contact {
     height: fit-content;
   }
@@ -896,9 +935,11 @@ h5 {
   .menu-button-container {
     display: flex;
   }
+
   a {
     color: black;
   }
+
   .menu {
     position: absolute;
     top: 0;
@@ -911,21 +952,25 @@ h5 {
     padding: 2rem;
     z-index: 2;
   }
+
   .menu li:hover {
     transform: scale(1);
   }
-  #menu-toggle ~ .menu li {
+
+  #menu-toggle~.menu li {
     height: 0;
     margin: 0;
     padding: 0;
     border: 0;
   }
-  #menu-toggle:checked ~ .menu li {
+
+  #menu-toggle:checked~.menu li {
     border: 1px solid #9f9a9a;
     height: 2.5em;
     padding: 0.5em;
   }
-  .menu > li {
+
+  .menu>li {
     display: flex;
     justify-content: center;
     margin: 0;
@@ -934,15 +979,19 @@ h5 {
     color: black;
     background-color: #e8e8e8;
   }
-  .menu > li:not(:last-child) {
+
+  .menu>li:not(:last-child) {
     border-bottom: 1px solid #444;
   }
+
   .logo i {
     color: white;
   }
+
   .about img {
     display: none;
   }
+
   .main {
     width: 100%;
   }
@@ -955,39 +1004,50 @@ h5 {
     overflow-y: scroll;
     text-align: center;
   }
+
   h1 {
     font-size: 60px;
   }
+
   h2 {
     font-size: 40px;
   }
+
   h3 {
     font-size: 17px;
   }
+
   .service {
     height: fit-content;
   }
+
   .box {
     display: block;
   }
+
   .card {
     margin: 15px auto;
   }
+
   .CV-page {
     height: fit-content;
   }
+
   .contact {
     height: fit-content;
     margin: 1rem;
     padding: 0;
   }
+
   section .title {
     font-size: 60px;
   }
+
   .max-width {
     padding: 0;
     max-width: fit-content;
   }
+
   .CV-page {
     padding: 0 1em;
   }
