--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,16 +6,11 @@
  * copyright 2022 codewithsadee
  */
 
-
-
-
-
 /*-----------------------------------*\
  * #CUSTOM PROPERTY
 \*-----------------------------------*/
 
 :root {
-
   /**
    * colors
    */
@@ -30,9 +25,9 @@
    * typography
    */
 
-  --ff-saira-stencil-one: "Saira Stencil One", sans-serif; 
-  --ff-poppins: 'Poppins', sans-serif;
-  --ff-roboto: 'Roboto', sans-serif;
+  --ff-saira-stencil-one: "Saira Stencil One", sans-serif;
+  --ff-poppins: "Poppins", sans-serif;
+  --ff-roboto: "Roboto", sans-serif;
 
   --fs-1: 2rem;
   --fs-2: calc(1.813rem + 1vw);
@@ -63,19 +58,13 @@
 
   --radius-4: 4px;
   --radius-12: 12px;
-
 }
-
-
-
-
 
 /*-----------------------------------*\
  * #THEME COLORS
 \*-----------------------------------*/
 
 body.dark_theme {
-
   --bg-primary: hsl(0, 0%, 12%);
   --bg-secondary: hsl(0, 0%, 19%);
   --color-primary: hsl(0, 0%, 100%);
@@ -84,11 +73,9 @@ body.dark_theme {
   --input-bg: hsl(0, 0%, 16%);
 
   --shadow-1: 10px 10px 40px var(--card-shadow);
-
 }
 
 body.light_theme {
-
   --bg-primary: hsl(0, 0%, 90%);
   --bg-secondary: hsl(0, 0%, 100%);
   --color-primary: hsl(0, 0%, 12%);
@@ -97,26 +84,27 @@ body.light_theme {
   --input-bg: hsl(0, 0%, 93%);
 
   --shadow-1: 10px 10px 40px var(--card-shadow);
-
 }
-
-
-
-
 
 /*-----------------------------------*\
  * #RESET
 \*-----------------------------------*/
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-li { list-style: none; }
+li {
+  list-style: none;
+}
 
-a { text-decoration: none; }
+a {
+  text-decoration: none;
+}
 
 a,
 img,
@@ -127,7 +115,9 @@ label,
 select,
 button,
 textarea,
-ion-icon { display: block; }
+ion-icon {
+  display: block;
+}
 
 input,
 button,
@@ -139,12 +129,18 @@ textarea {
 }
 
 button,
-select { cursor: pointer; }
+select {
+  cursor: pointer;
+}
 
 input,
-textarea { width: 100%; }
+textarea {
+  width: 100%;
+}
 
-ion-icon { pointer-events: none; }
+ion-icon {
+  pointer-events: none;
+}
 
 :is(a, button, select) {
   outline-color: var(--scarlet);
@@ -166,17 +162,17 @@ body {
   transition: var(--transition-1);
 }
 
-body.active { overflow: hidden; }
-
-
-
-
+body.active {
+  overflow: hidden;
+}
 
 /*-----------------------------------*\
  * #REUSED STYLE
 \*-----------------------------------*/
 
-.container { padding-inline: 10px; }
+.container {
+  padding-inline: 10px;
+}
 
 .h1 {
   font-size: var(--fs-1);
@@ -186,21 +182,32 @@ body.active { overflow: hidden; }
 
 .h2,
 .h3,
-.h4 {
+.h4 .h5 {
   color: var(--color-primary);
   font-family: var(--ff-poppins);
   line-height: 1.2;
 }
 
-.h2 { font-size: var(--fs-2); }
+.h2 {
+  font-size: var(--fs-2);
+}
 
-.h3 { font-size: var(--fs-3); }
+.h3 {
+  font-size: var(--fs-3);
+}
 
-.h4 { font-size: var(--fs-5); }
+.h4 {
+  font-size: var(--fs-4);
+}
 
-.w-100 { 
+.h5 {
+  font-size: var(--fs-5);
+}
+
+.w-100 {
   margin-top: 10vh;
-  width: 100%; }
+  width: 100%;
+}
 
 .btn {
   max-width: max-content;
@@ -214,7 +221,9 @@ body.active { overflow: hidden; }
   transition: var(--transition-1);
 }
 
-.btn-primary { border-color: var(--color-primary); }
+.btn-primary {
+  border-color: var(--color-primary);
+}
 
 .btn-primary:is(:hover, :focus) {
   background: var(--color-primary);
@@ -224,10 +233,12 @@ body.active { overflow: hidden; }
 .btn-secondary {
   background: var(--raw-seinna);
   border-color: var(--raw-seinna);
-  color: var(--black);
+  color: var(--color-primary);
 }
 
-.btn-secondary:is(:hover, :focus) { --raw-seinna: hsl(24, 74%, 64%); }
+.btn-secondary:is(:hover, :focus) {
+  --raw-seinna: hsl(24, 74%, 45%);
+}
 
 .section-subtitle {
   position: relative;
@@ -252,7 +263,7 @@ body.active { overflow: hidden; }
   margin-bottom: 30px;
 }
 
-.experience-title{
+.experience-title {
   max-width: max-content;
   margin-bottom: 30px;
 }
@@ -280,10 +291,6 @@ body.active { overflow: hidden; }
   transition: var(--transition-1);
   z-index: 1;
 }
-
-
-
-
 
 /*-----------------------------------*\
  * #HEADER
@@ -354,7 +361,9 @@ body.active { overflow: hidden; }
   transition: var(--transition-1);
 }
 
-.header.active .theme-btn { background: var(--bg-primary); }
+.header.active .theme-btn {
+  background: var(--bg-primary);
+}
 
 .theme-btn .icon {
   position: relative;
@@ -378,7 +387,9 @@ body.active { overflow: hidden; }
   z-index: 2;
 }
 
-.nav-toggle-btn.active { transform: rotate(-45deg); }
+.nav-toggle-btn.active {
+  transform: rotate(-45deg);
+}
 
 .nav-toggle-btn span {
   width: 20px;
@@ -388,18 +399,26 @@ body.active { overflow: hidden; }
   transition: var(--transition-1);
 }
 
-.nav-toggle-btn :is(.one, .three) { width: 10px; }
+.nav-toggle-btn :is(.one, .three) {
+  width: 10px;
+}
 
 .nav-toggle-btn .one {
   margin-left: auto;
   transform-origin: left;
 }
 
-.nav-toggle-btn .three { transform-origin: right; }
+.nav-toggle-btn .three {
+  transform-origin: right;
+}
 
-.nav-toggle-btn.active .one { transform: rotate(90deg) translateX(-3px); }
+.nav-toggle-btn.active .one {
+  transform: rotate(90deg) translateX(-3px);
+}
 
-.nav-toggle-btn.active .three { transform: rotate(90deg) translateX(3px); }
+.nav-toggle-btn.active .three {
+  transform: rotate(90deg) translateX(3px);
+}
 
 .navbar {
   position: fixed;
@@ -457,17 +476,17 @@ body.active { overflow: hidden; }
   transition: var(--transition-1);
 }
 
-.navbar-link:is(:hover, :focus)::before { width: 100%; }
-
-
-
-
+.navbar-link:is(:hover, :focus)::before {
+  width: 100%;
+}
 
 /*-----------------------------------*\
  * #HERO
 \*-----------------------------------*/
 
-main { overflow-x: hidden; }
+main {
+  overflow-x: hidden;
+}
 
 .hero {
   min-height: 100vh;
@@ -485,26 +504,30 @@ main { overflow-x: hidden; }
   margin-bottom: 30px;
 }
 
-:is(.hero-social-list, .scroll-down) { display: none; }
+:is(.hero-social-list, .scroll-down) {
+  display: none;
+}
 
-.hero-content { max-width: 450px; }
+.hero-content {
+  max-width: 450px;
+}
 
 .hero-title {
   text-align: center;
   margin-bottom: 30px;
 }
 
-.hero .btn-primary { margin-inline: auto; }
-
-
-
-
+.hero .btn-primary {
+  margin-inline: auto;
+}
 
 /*-----------------------------------*\
  * #STATS
 \*-----------------------------------*/
 
-.stats { padding-block: var(--section-padding); }
+.stats {
+  padding-block: var(--section-padding);
+}
 
 .stats-list {
   display: grid;
@@ -522,7 +545,9 @@ main { overflow-x: hidden; }
   transition: var(--transition-1);
 }
 
-.stats-card:is(:hover, :focus) { transform: translateY(-5px); }
+.stats-card:is(:hover, :focus) {
+  transform: translateY(-5px);
+}
 
 .stats-card .card-icon {
   background: var(--raw-seinna);
@@ -552,17 +577,17 @@ main { overflow-x: hidden; }
   margin-top: 5px;
 }
 
-.stats-card > ion-icon { color: var(--color-secondary); }
-
-
-
-
+.stats-card > ion-icon {
+  color: var(--color-secondary);
+}
 
 /*-----------------------------------*\
  * #ABOUT
 \*-----------------------------------*/
 
-.about { padding-block: var(--section-padding); }
+.about {
+  padding-block: var(--section-padding);
+}
 
 .about-banner {
   max-width: 400px;
@@ -575,15 +600,17 @@ main { overflow-x: hidden; }
   width: 100%;
 }
 
-.about .btn-secondary { margin-bottom: 10px; }
-
-
+.about .btn-secondary {
+  margin-bottom: 10px;
+}
 
 /*-----------------------------------*\
  * #EXPERIENCE
 \*-----------------------------------*/
 
-.experience { padding-block: var(--section-padding); }
+.experience {
+  padding-block: var(--section-padding);
+}
 
 .experience-banner {
   max-width: 400px;
@@ -596,15 +623,21 @@ main { overflow-x: hidden; }
   width: 100%;
 }
 
-.experience .btn-secondary { margin-bottom: 10px; }
+.experience .btn-secondary {
+  margin-bottom: 10px;
+}
 
 /*-----------------------------------*\
  * #SKILLS
 \*-----------------------------------*/
 
-.skills { padding-block: var(--section-padding); }
+.skills {
+  padding-block: var(--section-padding);
+}
 
-.skills-content { margin-bottom: 50px; }
+.skills-content {
+  margin-bottom: 50px;
+}
 
 .skills-toggle {
   background: var(--bg-secondary);
@@ -644,10 +677,14 @@ main { overflow-x: hidden; }
   transition: var(--transition-1);
 }
 
-.toggle-btn.active { color: var(--white); }
+.toggle-btn.active {
+  color: var(--white);
+}
 
 .skills-box.active .skills-list,
-.skills-box .tools-list { display: none; }
+.skills-box .tools-list {
+  display: none;
+}
 
 .skills-box .skills-list,
 .skills-box.active .tools-list {
@@ -660,10 +697,12 @@ main { overflow-x: hidden; }
 }
 
 @keyframes fadeIn {
-
-  0% { opacity: 0; }
-  100% { opacity: 1; }
-
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .skill-card {
@@ -683,24 +722,24 @@ main { overflow-x: hidden; }
   opacity: 1;
 }
 
-.skill-card .card-icon img{
+.skill-card .card-icon img {
   height: 50px;
   width: 50px;
 }
-
-
-
-
 
 /*-----------------------------------*\
  * #PROJECT
 \*-----------------------------------*/
 
-.project { padding-block: var(--section-padding); }
+.project {
+  padding-block: var(--section-padding);
+}
 
-.project-list > li { margin-bottom: 25px; }
+.project-list > li {
+  margin-bottom: 25px;
+}
 
-.w-100{
+.w-100 {
   border-radius: 25px;
 }
 
@@ -732,11 +771,15 @@ main { overflow-x: hidden; }
   padding: 20px;
 }
 
-.project-card .card-title { margin-bottom: 10px; }
+.project-card .card-title {
+  margin-bottom: 10px;
+}
 
-.project-card .card-desc { margin-bottom: 10px; }
+.project-card .card-desc {
+  margin-bottom: 10px;
+}
 
-.project-card :is(.card-title,.card-desc, .publish-date) {
+.project-card :is(.card-title, .card-desc, .publish-date) {
   background: var(--bg-primary);
   padding: 6px 12px;
   width: max-content;
@@ -763,7 +806,9 @@ main { overflow-x: hidden; }
   opacity: 1;
 }
 
-.project-card:is(:hover, :focus) .publish-date { transition-delay: 0.1s; }
+.project-card:is(:hover, :focus) .publish-date {
+  transition-delay: 0.1s;
+}
 
 .load-more {
   font-size: var(--fs-4);
@@ -772,17 +817,17 @@ main { overflow-x: hidden; }
   margin-inline: auto;
 }
 
-
-
-
-
 /*-----------------------------------*\
  * #CONTACT
 \*-----------------------------------*/
 
-.contact { padding-block: var(--section-padding); }
+.contact {
+  padding-block: var(--section-padding);
+}
 
-.contact-content { margin-bottom: 50px; }
+.contact-content {
+  margin-bottom: 50px;
+}
 
 .contact-list-item {
   display: flex;
@@ -796,9 +841,16 @@ main { overflow-x: hidden; }
   color: var(--color-primary);
 }
 
-.contact-item-icon ion-icon { --ionicon-stroke-width: 40px; }
+.contact-item-icon ion-icon {
+  --ionicon-stroke-width: 40px;
+}
 
-.contact-item-title { margin-bottom: 10px; }
+.contact-item-title {
+  color: var(--color-secondary);
+  line-height: 1.6;
+  font-style: normal;
+  transition: var(--transition-1);
+}
 
 .contact-list-item .contact-info {
   color: var(--color-secondary);
@@ -807,7 +859,9 @@ main { overflow-x: hidden; }
   transition: var(--transition-1);
 }
 
-.contact-info:not(address):is(:hover, :focus) { color: var(--color-primary); }
+.contact-info:not(address):is(:hover, :focus) {
+  color: var(--color-primary);
+}
 
 .contac-social-list {
   display: flex;
@@ -847,7 +901,9 @@ main { overflow-x: hidden; }
   box-shadow: var(--shadow-1);
 }
 
-.form-wrapper { margin-bottom: 25px; }
+.form-wrapper {
+  margin-bottom: 25px;
+}
 
 .form-label {
   color: var(--color-primary);
@@ -857,7 +913,9 @@ main { overflow-x: hidden; }
   margin-left: 5px;
 }
 
-.input-wrapper { position: relative; }
+.input-wrapper {
+  position: relative;
+}
 
 .input-field {
   background: var(--input-bg);
@@ -884,9 +942,13 @@ textarea.input-field {
   resize: vertical;
 }
 
-.input-field:focus { outline: 1px solid; }
+.input-field:focus {
+  outline: 1px solid;
+}
 
-.input-field:focus + ion-icon { color: var(--raw-seinna); }
+.input-field:focus + ion-icon {
+  color: var(--raw-seinna);
+}
 
 .contact .btn-primary {
   max-width: unset;
@@ -894,10 +956,6 @@ textarea.input-field {
   background: var(--color-primary);
   color: var(--bg-primary);
 }
-
-
-
-
 
 /*-----------------------------------*\
  * #FOOTER
@@ -910,7 +968,9 @@ textarea.input-field {
   box-shadow: var(--shadow-1);
 }
 
-.footer .logo { margin-bottom: 15px; }
+.footer .logo {
+  margin-bottom: 15px;
+}
 
 .copyright {
   color: var(--color-secondary);
@@ -921,10 +981,6 @@ textarea.input-field {
   display: inline-block;
   color: var(--raw-seinna);
 }
-
-
-
-
 
 /*-----------------------------------*\
  * #GO TO TOP
@@ -955,10 +1011,6 @@ textarea.input-field {
   transform: translateY(0);
 }
 
-
-
-
-
 /*-----------------------------------*\
  * #MEDIA QUERIES
 \*-----------------------------------*/
@@ -968,7 +1020,6 @@ textarea.input-field {
  */
 
 @media (min-width: 550px) {
-
   /**
    * REUSED STYLE
    */
@@ -978,9 +1029,13 @@ textarea.input-field {
     margin-inline: auto;
   }
 
-  .section-title { max-width: 380px; }
+  .section-title {
+    max-width: 380px;
+  }
 
-  .experience-title{max-width: max-content;}
+  .experience-title {
+    max-width: max-content;
+  }
 
   /**
    * PROJECT
@@ -991,37 +1046,39 @@ textarea.input-field {
     column-gap: 25px;
   }
 
-  .project-list > li:first-child { column-span: all; }
-
+  .project-list > li:first-child {
+    column-span: all;
+  }
 }
-
-
-
-
 
 /**
  * responsive for larger than 768px screen
  */
 
 @media (min-width: 768px) {
-
   /**
    * REUSED STYLE
    */
 
-  .container { max-width: 720px; }
+  .container {
+    max-width: 720px;
+  }
 
-  .section-title { max-width: 430px; }
+  .section-title {
+    max-width: 430px;
+  }
 
-  .experience-title{max-width: max-content;}
+  .experience-title {
+    max-width: max-content;
+  }
 
   /**
    * STATS
    */
 
-  .stats-list { grid-template-columns: 1fr 1fr; }
-
-
+  .stats-list {
+    grid-template-columns: 1fr 1fr;
+  }
 
   /**
    * ABOUT
@@ -1034,11 +1091,13 @@ textarea.input-field {
     gap: 20px;
   }
 
-  .about .btn { max-width: max-content; }
+  .about .btn {
+    max-width: max-content;
+  }
 
-  .about .btn-secondary { margin-bottom: 0; }
-
-
+  .about .btn-secondary {
+    margin-bottom: 0;
+  }
 
   /**
    * CONTACT
@@ -1048,25 +1107,18 @@ textarea.input-field {
     max-width: 450px;
     margin-inline: auto;
   }
-
 }
-
-
-
-
 
 /**
  * responsive for larger than 992px screen
  */
 
 @media (min-width: 992px) {
-
   /**
    * CUSTOM PROPERTY
    */
 
   :root {
-
     /**
      * typography
      */
@@ -1078,16 +1130,15 @@ textarea.input-field {
      */
 
     --section-padding: 100px;
-
   }
-
-
 
   /**
    * REUSED STYLE
    */
 
-  .container { max-width: 980px; }
+  .container {
+    max-width: 980px;
+  }
 
   .section-content {
     position: relative;
@@ -1109,24 +1160,30 @@ textarea.input-field {
     right: calc(100% + 20px);
   }
 
-
-
   /**
    * HEADER
    */
 
-  .header { padding-block: 30px; }
+  .header {
+    padding-block: 30px;
+  }
 
-  .header.active { padding-block: 15px; }
+  .header.active {
+    padding-block: 15px;
+  }
 
   .navbar-actions {
     order: 1;
     margin-left: 0;
   }
 
-  .nav-toggle-btn { display: none; }
+  .nav-toggle-btn {
+    display: none;
+  }
 
-  .navbar { all: unset; }
+  .navbar {
+    all: unset;
+  }
 
   .navbar-link {
     transform: translateY(0);
@@ -1147,9 +1204,9 @@ textarea.input-field {
     gap: 20px;
   }
 
-  .navbar-link::before { height: 2px; }
-
-
+  .navbar-link::before {
+    height: 2px;
+  }
 
   /**
    * HERO
@@ -1181,7 +1238,9 @@ textarea.input-field {
     filter: drop-shadow(2px 4px 10px var(--black));
   }
 
-  .hero .btn-primary:is(:hover, :focus) { color: hsl(0, 0%, 12%); }
+  .hero .btn-primary:is(:hover, :focus) {
+    color: hsl(0, 0%, 12%);
+  }
 
   .hero-social-list {
     display: block;
@@ -1209,7 +1268,9 @@ textarea.input-field {
     transition: var(--transition-1);
   }
 
-  .hero-social-link:is(:hover, :focus) { color: var(--color-primary); }
+  .hero-social-link:is(:hover, :focus) {
+    color: var(--color-primary);
+  }
 
   .hero-social-link .tooltip {
     --trans-x: 10px;
@@ -1246,18 +1307,17 @@ textarea.input-field {
     background: var(--color-secondary);
   }
 
-
-
   /**
    * STATS
    */
 
-  .stats-list { grid-template-columns: repeat(2, 1fr); }
+  .stats-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
-  .stats-card { height: 100%; }
-
-
-
+  .stats-card {
+    height: 100%;
+  }
 
   /**
    * ABOUT
@@ -1270,10 +1330,9 @@ textarea.input-field {
     gap: 30px;
   }
 
-  .about-banner { margin-bottom: 0; }
-
-
-
+  .about-banner {
+    margin-bottom: 0;
+  }
 
   /**
    * SKILLS
@@ -1286,25 +1345,27 @@ textarea.input-field {
     gap: 50px;
   }
 
-  .skills-content { margin-bottom: 0; }
+  .skills-content {
+    margin-bottom: 0;
+  }
 
-  .skills-toggle { margin-inline: 0; }
-
-
+  .skills-toggle {
+    margin-inline: 0;
+  }
 
   /**
    * PROJECT
    */
 
-  .project-list { column-count: 3; }
+  .project-list {
+    column-count: 3;
+  }
 
   .project-list > li:first-child {
     column-span: unset;
     margin: 25px;
     margin-left: 0;
   }
-
-
 
   /**
    * CONTACT
@@ -1316,13 +1377,17 @@ textarea.input-field {
     gap: 30px;
   }
 
-  .contact-content { margin-bottom: 0; }
+  .contact-content {
+    margin-bottom: 0;
+  }
 
-  .contact-form { width: 100%; }
+  .contact-form {
+    width: 100%;
+  }
 
-  .contact-list { margin-left: -40px; }
-
-
+  .contact-list {
+    margin-left: -40px;
+  }
 
   /**
    * FOOTER
@@ -1334,46 +1399,49 @@ textarea.input-field {
     align-items: center;
   }
 
-  .footer .logo { margin-bottom: 0; }
-
+  .footer .logo {
+    margin-bottom: 0;
+  }
 }
-
-
-
-
 
 /**
  * responsive for larger than 1200px screen
  */
 
 @media (min-width: 1200px) {
-
   /**
    * REUSED STYLE
    */
 
-  .container { max-width: 1150px; }
+  .container {
+    max-width: 1150px;
+  }
 
-  .section-title { max-width: 460px; }
+  .section-title {
+    max-width: 460px;
+  }
 
-  .experience-title{max-width: max-content;}
-
+  .experience-title {
+    max-width: max-content;
+  }
 
   /**
    * HERO
    */
 
-  .hero-social-list { left: -80px; }
+  .hero-social-list {
+    left: -80px;
+  }
 
-  .scroll-down { right: -80px; }
-
-
-
+  .scroll-down {
+    right: -80px;
+  }
 
   /**
    * ABOUT
    */
 
-  .about-banner { max-width: 450px; }
-
+  .about-banner {
+    max-width: 450px;
+  }
 }
